Fixed disappearing menu/items when collapsed.

--- a/src/sgd/frontend/yeastgenome/static/scss/modules/_nested-lists.scss
+++ b/src/sgd/frontend/yeastgenome/static/scss/modules/_nested-lists.scss
@@ -1,4 +1,6 @@
 .nested-lists {
+    min-height: rem-calc(120);
+    padding-bottom: rem-calc(90);
 	i.fa { 
 		color: #47b; 
 		margin-right: 0.4em;
